# job-data-pipeline

./: .env  Dockerfile  README.md  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
data/: rikunabi.csv
notebook/: transform_experiments.ipynb
src/job_data_pipeline/: job_scraper.py  transform.py
tests/: test_job_scraper.py  test_transform.py
